# easter-raytracer

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md
src/: camera.h  color.h  hittable.h  hittable_list.h  interval.h  main.cpp  material.h  parallel.h  ray.h  rtweekend.h  sphere.h  threadpool.h  vec3.h
